-Full Screen Support & Linux Enhancement Impl